[tool.poetry]
name = "dertour"
version = "0.1.0"
description = ""
authors = ["Clemens Wältken <clemens.waltken@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"